--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>About Clubs</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
@@ -48,6 +48,7 @@ through activities like  Football and Cricket.
 
 
 </body>
+
 
 
 </html>
