--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sports Events</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -44,3 +44,4 @@
 
 
 </html>
+
